[workspace]
members = [
    # "rs/eth_state",
    "rs/minter"
]

[workspace.dependencies]
candid = "0.8.4"
ciborium = "0.2.0"
ethnum = "1.4.0"
hex = "0.4.3"
ic-canister-log = "0.2.0"
ic-cdk = "0.9.2"
ic-cdk-macros = "0.6.0"
ic-cdk-timers = "0.3.0"
ic-stable-structures = "0.5.4"
icrc-ledger-types = "0.1.0"
k256 = { version = "0.13.1", default_features = false }
p256 = { version = "0.13.2", default_features = false, features = [
  "arithmetic",
  "ecdsa",
  "pem",
  "pkcs8",
] } 
num-traits = "0.2.15"
rustic = "0.1.0"
serde = "1.0.164"
serde_bytes = "0.11.9"
serde_json = "1.0.105"
sha2 = "0.10.7"
zeroize = "1.6.0"

