[workspace]
members = [
    # "rs/eth_state",
    "rs/minter"
]

[workspace.dependencies]
async-trait = "0.1.73"
candid = { version = "0.9.5", features = ["parser"] }
# candid_derive = "0.6.3"
ciborium = "0.2.0"
ethnum = "1.4.0"
hex = "0.4.3"
ic-canister-log = "0.2.0"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ic-cdk-timers = "0.4.0"
ic-stable-structures = "0.5.6"
icrc-ledger-types = "0.1.0"
k256 = { version = "0.13.1", default_features = false }
p256 = { version = "0.13.2", default_features = false, features = [
  "arithmetic",
  "ecdsa",
  "pem",
  "pkcs8",
] }
lazy_static = "1.4.0" 
num-traits = "0.2.15"
rustic = "0.1.1"
serde = "1.0.164"
serde_bytes = "0.11.9"
serde_json = "1.0.105"
sha2 = "0.10.7"
zeroize = "1.6.0"

