[package]
name = "ckicp-minter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ckicp-minter"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
candid.workspace = true
# candid_derive.workspace = true
ciborium.workspace = true
hex.workspace = true
ic-canister-log.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
icrc-ledger-types.workspace = true
k256 = { workspace = true, default_features = false, features = ["arithmetic", "ecdsa"] }
getrandom = { workspace = true, features = ["custom"] }
lazy_static.workspace = true
num-traits.workspace = true
rustic = { workspace = true, features = ["access", "pausable", "reentrancy", "lifecycle"] }
rustic-macros.workspace = true
serde = {workspace = true, features = ["derive"] }
serde_bytes.workspace = true
serde_json.workspace = true
sha2.workspace = true
zeroize = { workspace = true , features = ["zeroize_derive"] }



[dev-dependencies]
proptest = "1.2.0"
